# gemini-embedding-2-mcp-server

./: README.md  pyproject.toml
docs/: architecture.md
src/gemini_mcp/: server.py
src/gemini_mcp/db/: store.py
src/gemini_mcp/embeddings/: gemini.py
src/gemini_mcp/parsers/: scanner.py
tests/: test_gemini.py  test_scanner.py
